fix: extraccion de datos -home/perfil - integracion de intento de crud perfil/crud-perfil - falta mejorar la interfaz ionic_modal para la auntenticacion de contraseña de usuario

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -8,7 +8,7 @@
     </ion-title>
     <ion-buttons slot="end">
       <ion-button
-        (click)="navigateAndBlur('/profile')"
+        (click)="navigateAndBlur('/perfil')"
         aria-label="Perfil de usuario"
       >
         <ion-icon src="assets/icons/user-circle.svg"></ion-icon>
