--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -18,7 +18,7 @@
   --ion-color-dark-shade: #0a0a0a; /* Very dark for deep contrast */
   --ion-color-success: #2ecc71; /* Vibrant success green */
   --ion-color-warning: #f1c40f; /* Brighter warning yellow */
-  --ion-color-tertiary: #c962e9; /* A more distinct tertiary color */ //gre//
+  --ion-color-tertiary: #c962e9; /* A more distinct tertiary color */ 
   --ion-color-secondary: #3498db; /* A clear secondary blue */
   --ion-color-accent: #00796b; /* A richer, deeper teal for primary actions */
   --ion-color-accent-rgb: 0, 121, 107;
