--- a/src/app/pages/empleado/clientes/clientes.page.html
+++ b/src/app/pages/empleado/clientes/clientes.page.html
@@ -34,7 +34,7 @@
           <div *ngIf="empresas[c.id]; else sinEmpresa">
             <div class="empresa-row"><span class="label">Razón social</span><span class="value">{{ empresas[c.id]?.razonSocial }}</span></div>
             <div class="empresa-row"><span class="label">RUC</span><span class="value">{{ empresas[c.id]?.ruc }}</span></div>
-            <div class="empresa-row"><span class="label">Dirección</span><span class="value">{{ empresas[c.id]?.['direccion'] }}</span></div>
+            <div class="empresa-row"><span class="label">Dirección</span><span class="value">{{ empresas[c.id]?.['dirección'] }}</span></div>
             <div class="empresa-row"><span class="label">Teléfono</span><span class="value">{{ empresas[c.id]?.telefono }}</span></div>
             <div class="empresa-row"><span class="label">Tipo</span><span class="value">{{ empresas[c.id]?.tipoEntidad }}</span></div>
             <div class="empresa-row"><span class="label">Estado</span><span class="value">{{ empresas[c.id]?.estado | titlecase }}</span></div>
