--- a/src/app/pages/empleado/clientes/clientes.page.html
+++ b/src/app/pages/empleado/clientes/clientes.page.html
@@ -14,10 +14,10 @@
   </ion-header>
 
 <ion-content>
-  <ion-list>
+  <ion-list class="lista-clientes">
     <ng-container *ngFor="let c of clientes">
       <ion-item class="cliente-item" (click)="toggleCliente(c)">
-        <ion-icon name="person-circle-outline" slot="start"></ion-icon>
+        <div slot="start" class="avatar-circle">{{ initial(c) }}</div>
         <ion-label>
           <h2>{{ c.nombre || c.username || 'Cliente' }}</h2>
           <p>{{ c.username }}</p>
@@ -26,8 +26,13 @@
           <ion-button color="medium" fill="clear" (click)="$event.stopPropagation(); toggleCliente(c)">
             <ion-icon [name]="expanded[c.id] ? 'chevron-up' : 'chevron-down'"></ion-icon>
           </ion-button>
-          <ion-button color="primary" fill="solid" [routerLink]="['/editar-cliente', c.id]" (click)="$event.stopPropagation()">
-            <ion-icon name="create-outline"></ion-icon>
+          <ion-button class="btn-edit" fill="solid" [routerLink]="['/editar-cliente', c.id]" (click)="$event.stopPropagation()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" class="icon-edit">
+              <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+              <path d="M7 7h-1a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-1" />
+              <path d="M20.385 6.585a2.1 2.1 0 0 0 -2.97 -2.97l-8.415 8.385v3h3l8.385 -8.415z" />
+              <path d="M16 5l3 3" />
+            </svg>
           </ion-button>
         </ion-buttons>
       </ion-item>
