--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,4 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+
+/* (revertido) sin overrides del popover de empresa */
