--- a/src/app/pages/empleado/add-cliente/add-cliente.page.scss
+++ b/src/app/pages/empleado/add-cliente/add-cliente.page.scss
@@ -48,4 +48,5 @@ ion-input {
 /* Color del valor seleccionado en el select de Empresa */
 .form-card ion-select {
   --color: #262626 !important;
+  --placeholder-color: #9EA3A6 !important;
 }
